# research-project-train-planner

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
data/: stations
migrations/2021-01-02-010855_create_iff_format/: down.sql  up.sql
migrations/2021-01-05-194558_dvs_messages/: down.sql  up.sql
migrations/2021-01-12-115944_change_dvs_message_to_longtext/: down.sql  up.sql
migrations/2021-01-17-162413_service_identifier/: down.sql  up.sql
migrations/2021-01-18-053333_add_long_lat_to_stations/: down.sql  up.sql
src/: benchable.rs  benchmarking.rs  csa.rs  dijkstra.rs  main.rs  types.rs
src/algorithms/: alg_macros.rs  csa.rs  csa_btree.rs  csa_vec.rs  mod.rs  raptor.rs  raptor_btree.rs  td.rs  td_simple_btree.rs  td_simple_vec.rs
src/data/: generic_data.rs  mod.rs  zeromq.rs
src/data/dvs/: dvs_message_types.rs  mod.rs  rit_message_types.rs
src/data/iff/: mod.rs  stop_list.sql  types.rs
src/data/railways_netherlands/: iff.rs  info_plus.rs  mod.rs  rit_message_types.rs  timetable_for_day.sql
src/database/: mod.rs  schema.rs  types.rs
